javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.21.FIELDACCESSARRAY.javali
//No access to fields of array
//Rule 2.3.21

class Main {
int y;
	void main() {
		int[] x;
		x = new int[10];
		y = x.l;
	}
}
